fix: Broken Inspect Pin by Hover

--- a/flow-editor/src/visual-node-editor/pin-view/pin-view.scss
+++ b/flow-editor/src/visual-node-editor/pin-view/pin-view.scss
@@ -52,7 +52,7 @@ $pin-highlight: #2887f4;
 .pin-handle {
   position: absolute;
   top: 50%;
-  width: 64px;
+  width: 16px;
   height: 32px;
   transform: translateY(-50%);
   border-radius: 50%;
