--- a/flow-editor/src/visual-node-editor/style.scss
+++ b/flow-editor/src/visual-node-editor/style.scss
@@ -226,4 +226,10 @@
       font-weight: normal;
     }
   }
+
+  &.dragged {
+    .pin-handle {
+      width: 64px;
+    }
+  }
 }
